# cws-game-of-life

./: CMakeLists.txt  CNAME  index.data  index.html  index.js  index.wasm
src/: ArgParser.cpp  ArgParser.h  main.cpp
src/commands/: CliCommand.cpp  CliCommand.h  command_callbacks.cpp  command_callbacks.h  commands.cpp  commands.h
src/game/: callbacks.cpp  callbacks.h  game.cpp  game.h  globals.cpp  globals.h
src/gol/: Cell.cpp  Cell.h  GOLArea.cpp  GOLArea.h  Rule.cpp  Rule.h
